2007-07-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-01
	* allow for empty (db) directories to be removed in the
	SaveConfiguration dialog (context menu)
	* ScrollableMenu: show either both arrows or no arrows

2007-07-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* add ESModuleTemplates and ESModules tables to the db schema
	* add ESModule Template/Instance to the data model
	* add ESModule relevant components to converter/
	* add ESModule relevant code to gui/

2007-07-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* fix bug in SaveConfigurationDialog (wouldn't react to OK/Cancel
	buttons)
	* change name of temporary db server from cmssrv0.cern.ch to
	cmssrv0 (as it was moved to the private .cms network)

2007-06-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* updates to panels and dialogs, robust UI designs using NetBeans.
	* The node of an inserted module reference gets immediately
	selected.
	
2007-06-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* parser: ESProducers being parsed (as Modules with type
	'ESProducer')
	* add directory 'ext' and add the jars for the JDBC drivers to
	it. Also add a jar for org.jdesktop.layout.* support, which allows
	for GUIs to be designed with the Netbeans GUI Editor
	* adjust startGUI script to rely on the jars in ext/
	* bug fix: correctly change values of nested PSet in the instance
	panel
	* bug fix: VPSet.setValue() needed one.
	* set currentObject to null if the treetable fires a
	treeStructureChanged event -> avoid Add Path / Add Sequence to
	skip the entering of a valid name
	
2007-06-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* add functionality to *export* configurations to other DBs (Menu
	Database -> Export Configuration)
	* add functionality to *migrate* a configuration to another