@@ -266,7 +266,8 @@ public class SoftwareRelease
 	    if (!edsourceTemplatesByName.containsKey(edsource.name())) {
 		edsourceTemplates.add(edsource);
 		edsourceTemplatesByName.put(edsource.name(),edsource);
-		edsourceTemplateNamesByDbId.put(edsource.dbId(),edsource.name());
+		edsourceTemplateNamesByDbId.put(edsource.databaseId(),
+						edsource.name());
 		return true;
 	    }
 	}
@@ -275,7 +276,8 @@ public class SoftwareRelease
 	    if (!essourceTemplatesByName.containsKey(essource.name())) {
 		essourceTemplates.add(essource);
 		essourceTemplatesByName.put(essource.name(),essource);
-		essourceTemplateNamesByDbId.put(essource.dbId(),essource.name());
+		essourceTemplateNamesByDbId.put(essource.databaseId(),
+						essource.name());
 		return true;
 	    }
 	}
@@ -284,7 +286,8 @@ public class SoftwareRelease
 	    if (!esmoduleTemplatesByName.containsKey(esmodule.name())) {
 		esmoduleTemplates.add(esmodule);
 		esmoduleTemplatesByName.put(esmodule.name(),esmodule);
-		esmoduleTemplateNamesByDbId.put(esmodule.dbId(),esmodule.name());
+		esmoduleTemplateNamesByDbId.put(esmodule.databaseId(),
+						esmodule.name());
 		return true;
 	    }
 	}
@@ -293,7 +296,8 @@ public class SoftwareRelease
 	    if (!serviceTemplatesByName.containsKey(service.name())) {
 		serviceTemplates.add(service);
 		serviceTemplatesByName.put(service.name(),service);
-		serviceTemplateNamesByDbId.put(service.dbId(),service.name());
+		serviceTemplateNamesByDbId.put(service.databaseId(),
+					       service.name());
 		return true;
 	    }
 	}
@@ -302,7 +306,8 @@ public class SoftwareRelease
 	    if (!moduleTemplatesByName.containsKey(module.name())) {
 		moduleTemplates.add(module);
 		moduleTemplatesByName.put(module.name(),module);
-		moduleTemplateNamesByDbId.put(module.dbId(),module.name());
+		moduleTemplateNamesByDbId.put(module.databaseId(),
+					      module.name());
 		return true;
 	    }
 	}
